# flow

./: Cargo.toml  README.md
fcs/: CHANGELOG.md  Cargo.toml  GPU_BENCHMARKING.md  README.md
fcs/benches/: analyze_benchmarks.rs  dataframe_parsing.rs  matrix_operations.rs
fcs/src/: datatype.rs  file.rs  header.rs  lib.rs  matrix.rs  metadata.rs  parameter.rs  tests.rs  transform.rs  write.rs
fcs/src/keyword/: helpers.rs  mod.rs  parsing.rs  tests.rs
flow-gates/: Cargo.toml
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/: Summary.csv
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/01Rectangular/: BetweenMinAndMax.txt  EqualToMax.txt  EqualToMin.txt  GreaterThanMinAndMax.txt  InNoDimensions.txt  InOneDimensions.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/02CtSRectangular/: CtSR_01.txt  CtSR_02.txt  CtSR_07.txt  CtSR_10.txt  CtSR_13.txt  CtSR_14.txt  CtSR_18.txt  CtSR_19.txt  CtSR_21.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/03LargeRectangular/: Gate02.txt  Gate03.txt  Gate06.txt  Gate11.txt  Gate13.txt  Gate14.txt  Gate16.txt  Gate17.txt  Gate21.txt  Gate23.txt  Gate26.txt  Gate27.txt  Gate31.txt  Gate33.txt  Gate34.txt  Gate36.txt  Gate37.txt  Gate39.txt  Gate41.txt  Gate42.txt  Gate43.txt  Gate44.txt  Gate45.txt  Gate46.txt  Gatep1.txt  Gatep3.txt  Gatep5.txt  Gatep7.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/04PolygonGates/: ComplicatedNonSimple2.txt  ComplicatedNonSimple3.txt  ConcaveBoundary.txt  NonSimpleBottomInside.txt  NonSimpleLeftOutside.txt  NonSimpleRightOutside.txt  NonSimpleTopInside.txt  RectangleBoundary.txt  SimpleConcaveOutside.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/05CtSPolygonGates/: CtSPg_01.txt  CtSPg_04.txt  CtSPg_07.txt  CtSPg_09.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/06LargePolygons/: G10pts.txt  G250pts.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/07ComplicatedPolygons/: G1i2.txt  G2i1.txt  G3i1.txt  G3i2.txt  G3i7.txt  G4i1.txt  G5i1.txt  G5i3.txt  G6i100.txt  G6i1000.txt  G6i10000.txt  G6i16.txt  G6i2347.txt  G6i4.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/08Ellipses/: Ellipse_03o.txt  Ellipse_08o.txt  Ellipse_11i.txt  Ellipse_13o.txt  Ellipse_17o.txt  Ellipse_19i.txt  Ellipse_20o.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/09Ellipsoids/: Ellipsoid_02i.txt  Ellipsoid_05o.txt  Ellipsoid_09i.txt  Ellipsoid_10i.txt  Ellipsoid_11i.txt  Ellipsoid_13o.txt  Ellipsoid_16i.txt  Ellipsoid_19i.txt  Ellipsoid_20o.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/10PolytopeGates/: polytope_01i.txt  polytope_04i.txt  polytope_05i.txt  polytope_08i.txt  polytope_10i.txt  polytope_11i.txt  polytope_13i.txt  polytope_14o.txt  polytope_15i.txt  polytope_16o.txt  polytope_20o.txt  polytope_21o.txt
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Expected Results/11DecisionTrees/: G1D-E.txt  G2D-GG.txt  G4D-GGGG.txt  G4D-GLGG.txt  G4D-GLLG.txt  G4D-LGGG.txt  G4D-LGLG.txt  (+1 more)
flow-gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Gating-ML Files/: 01Rectangular.xml  02CtSRectangular.xml  04PolygonGates.xml  05CtSPolygonGates.xml  06LargePolygons.xml  13LargeDecisionTrees.xml  14BooleanGates.xml  16LargeBooleanGates.xml  18ParentIdTest2.xml  19TrCombination.xml  20TrRatio.xml  21TrQuadratic.xml  25TrASinH.xml  26TrSinH.xml  27TrHyperlog.xml  30TrInvSplitScale.xml  32TrCompensation2.xml
flow-plots/: CHANGELOG.md  Cargo.toml
flow-plots/bindings/: BinaryPixelChunk.ts  RawPixelData.ts
flow-plots/src/: colormap.rs  density_calc.rs  helpers.rs
flow-plots/src/options/: axis.rs
flow-plots/src/plots/: density.rs
flow-plots/src/render/: mod.rs  plotters_backend.rs  progress.rs
gates/: CHANGELOG.md  Cargo.toml  GPU_PERFORMANCE_FINDINGS.md  README.md
gates/Gating-ML.v1.5.081030.Compliance-tests.081030/Gating-ML Files/: 03LargeRectangular.xml  07ComplicatedPolygons.xml  08Ellipses.xml  09Ellipsoids.xml  10PolytopeGates.xml  11DecisionTrees.xml  12CtSDecisionTreeGates.xml  15CtSBooleanGates.xml  17ParentIdTest.xml  22TrSqrt.xml  23TrLn.xml  24TrExp.xml  28TrEH.xml  29TrSplitScale.xml  31TrCompensation.xml
gates/Gating-ML.v1.5.081030.Compliance-tests.081030/List-mode Data Files/: int-10_events_8_parameters.fcs  real-8-parameters.data.fcs
gates/src/: batch_filtering.rs  ellipse.rs  error.rs  error_tests.rs  gatingml.rs  hierarchy.rs  lib.rs  linking.rs  polygon.rs  rectangle.rs  scope.rs  statistics.rs  traits.rs  traits_tests.rs  transforms.rs  types.rs
gates/src/filtering/: cache.rs  mod.rs
gates/src/geometry/: construction.rs  mod.rs
gates/tests/: compliance_tests.rs
peacoqc-cli/: CHANGELOG.md  Cargo.toml  README.md
peacoqc-cli/src/: main.rs
peacoqc-rs/: .gitignore  CHANGELOG.md  Cargo.toml  DEV_NOTES.md  QUICK_START.md  README.md
peacoqc-rs/benches/: KDE_PERFORMANCE_ANALYSIS.md  gpu_bench.rs  kde_bench.rs  peacoqc_bench.rs  qc_throughput.rs
peacoqc-rs/examples/: basic_usage.rs  tauri_command.rs  test_report.json
peacoqc-rs/src/: error.rs  fcs.rs  lib.rs
peacoqc-rs/src/gpu/: backend.rs  batched.rs  context.rs  fft.rs  matrix.rs  mod.rs  stats.rs
peacoqc-rs/src/qc/: consecutive.rs  debug.rs  doublets.rs  isolation_tree.rs  mad.rs  margins.rs  mod.rs  monotonic.rs  peacoqc.rs  peaks.rs  plots.rs
peacoqc-rs/src/stats/: density.rs  median_mad.rs  mod.rs  spline.rs
peacoqc-rs/tests/: README.md  algorithm_correctness_tests.rs  gpu_correctness.rs  integration_regression_tests.rs  r_compatibility.rs  regression_tests.rs  spline_r_comparison.rs  test_peak_detection.rs
plots/: CHANGELOG.md  Cargo.toml  GPU_EVALUATION.md  README.md
plots/benches/: batch_density.rs
plots/src/: density_calc.rs  helpers.rs  lib.rs  tests.rs
plots/src/options/: base.rs  density.rs  mod.rs
plots/src/plots/: density.rs  mod.rs  traits.rs
plots/src/render/: plotters_backend.rs
(+399 files in other folders)
