[package]
name = "flow-fcs"
version = "0.1.0"
edition = "2024"
authors = ["James Moynihan"]
repository = "https://github.com/jrmoynihan/flow-fcs"
license = "MIT"
description = "High-level Flow Cytometry Standard (FCS) file struct and operations"
keywords = [
    "flow",
    "cytometry",
    "standard",
    "fcs",
    "bioinformatics",
    "science",
    "parser",
]
categories = ["science", "parser"]

[dependencies]
# Polars for columnar data storage
# Note: Using default-features = false to reduce bloat, but keeping dtype-full as it's needed
polars = { version = "0.51", default-features = false, features = [
    "lazy",
    "parquet",
    "ndarray",
    "dtype-full"
] }
# Matrix manipulation
ndarray = { version = "0.17.1", features = [
    "blas",
    "matrixmultiply-threading",
    "rayon",
    "serde",
] }
ndarray-linalg = { version = "0.18", default-features = false }

ts-rs = { version = "11.1.0", optional = true } # Generate TypeScript bindings for Rust types

# Parallelization
rayon = "1.11"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"

# Performance
uuid = { version = "1.18.1", features = ["v4"] } # For generating UUIDs/GUIDs
memchr = "2.7.6" # SIMD-accelerated string searching in metadata parsing
rustc-hash = "2.1" # A speedy, non-cryptographic hashing algorithm used by rustc
memmap2 = "0.9.8"  # For memory-mapping large files
# TODO: check out https://crates.io/crates/memmap3 as a `safe` replacement 

# DX improvement
itertools = "0.14" # For iterating over collections
derive_builder = "0.20" # For building structs with builder pattern
byteorder = "1.5" # For dealing with endianness of data
bytecount = "0.6.4" # For counting bytes in a slice of bytes
strum = "0.27.2" # For enum-like types
strum_macros = "0.27.2" # For enum-like types
regex = "1.11.3" # For regular expressions
bytemuck = { version = "1.24", features = ["derive"] } # Bytemuck for zero-copy bit-cast conversions between types

[dev-dependencies]
approx = "0.5" # For approximate comparisons

[features]
typescript = ["dep:ts-rs"] # Enable TypeScript bindings for Rust types
