[workspace]
members = [
    "flow-fcs",
    "flow-plots",
    "flow-gates",
    "peacoqc-rs",
    "peacoqc-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["James Moynihan"]
license = "MIT"

[workspace.metadata.scripts]
build = "cargo build --workspace"
test = "cargo test --workspace"
run = "cargo run --workspace"
check = "cargo check --workspace"
clippy = "cargo clippy --workspace"
fmt = "cargo fmt --workspace"
dry-release-all = "cargo smart-release"
dry-release-flow-fcs = "cargo smart-release flow-fcs --update-crates-index"
dry-release-flow-plots = "cargo smart-release flow-plots"
dry-release-flow-gates = "cargo smart-release flow-gates"
dry-release-peacoqc-rs = "cargo smart-release peacoqc-rs"
dry-release-peacoqc-cli = "cargo smart-release peacoqc-cli"
changelog-all = "cargo changelog --workspace"
changelog-flow-fcs = "cargo changelog --write flow-fcs"
changelog-flow-plots = "cargo changelog flow-plots"
changelog-flow-gates = "cargo changelog flow-gates"
changelog-peacoqc-rs = "cargo changelog peacoqc-rs"
changelog-peacoqc-cli = "cargo changelog peacoqc-cli"
publish-all = "cargo smart-release --execute"
publish-flow-fcs = "cargo smart-release flow-fcs --execute"
publish-flow-plots = "cargo smart-release flow-plots --execute"
publish-flow-gates = "cargo smart-release flow-gates --execute"
publish-peacoqc-rs = "cargo smart-release peacoqc-rs --execute"
publish-peacoqc-cli = "cargo smart-release peacoqc-cli --execute"

[workspace.dependencies]
# Polars for columnar data storage
# Note: Using default-features = false to reduce bloat, but keeping dtype-full as it's needed
polars = { version = "0.51", default-features = false, features = [
    "lazy",
    "ndarray",
    "dtype-full"
] }
# Matrix manipulation
ndarray = { version = "0.17.1", features = [
    "blas",
    "matrixmultiply-threading",
    "rayon",
    "serde",
] }
ndarray-linalg = { version = "0.18", default-features = false }

# Parallelization
rayon = "1.11"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"

# Performance
uuid = { version = "1.18.1", features = ["v4"] } # For generating UUIDs/GUIDs
memchr = "2.7.6" # SIMD-accelerated string searching in metadata parsing
rustc-hash = "2.1" # A speedy, non-cryptographic hashing algorithm used by rustc
memmap2 = "0.9.8"  # For memory-mapping large files
# TODO: check out https://crates.io/crates/memmap3 as a `safe` replacement 

# DX improvement
itertools = "0.14" # For iterating over collections
derive_builder = "0.20" # For building structs with builder pattern
byteorder = "1.5" # For dealing with endianness of data
bytecount = "0.6.4" # For counting bytes in a slice of bytes
strum = "0.27.2" # For enum-like types
strum_macros = "0.27.2" # For enum-like types
regex = "1.11.3" # For regular expressions
bytemuck = { version = "1.24", features = ["derive"] } # Bytemuck for zero-copy bit-cast conversions between types
rand = "0.9.2"