[package]
name = "flow-plots"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository = "https://github.com/jrmoynihan/flow-plots"
license = "MIT"
description = "Package for drawing and interacting with plots in flow cytometry data"
keywords = [
    "flow",
    "cytometry",
    "standard",
    "fcs",
    "bioinformatics",
    "science",
    "visualization",
    "plots",
]
categories = ["science", "visualization"]

[dependencies]
colormap = "0.0.2"
colorgrad = "0.7"
derive_builder = { workspace = true }
flow-fcs = "0.1.0"
image = "0.25.9"
plotters = "0.3.7"
anyhow = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ts-rs = "11.1.0"
once_cell = "1.20"
rayon = { workspace = true }
num-traits = "0.2"
