[package]
name="flow-gates"
version= "0.2.0"
edition.workspace=true
authors.workspace=true
repository="https://github.com/jrmoynihan/flow/flow-gates"
license="MIT"
description="Package for drawing and interacting with gates in flow cytometry data"
keywords=[
    "flow",
    "cytometry",
    "bioinformatics",
    "science",
    "gates",
]
categories=["science", "visualization"]

[dependencies]
flow-fcs            ={ path="../fcs", version= "^0.2.0" }
flow-plots          ={ path="../plots", version= "^0.2.0" }
anyhow.workspace    =true
thiserror.workspace =true
serde.workspace     =true
serde_json.workspace=true
geo                 ="0.32"
rstar               ="0.12"
quick-xml           ={ version="0.39", features=["serialize"] }
rayon               ={ workspace=true }
once_cell           ="1.20"
bytemuck            ={ workspace=true }

[features]
default=[]

[dev-dependencies]
criterion={ version="0.8.1", features=["html_reports"] }
rand="0.9"

[package.metadata.scripts]
test-compliance     ="cargo test --test compliance_tests -- --ignored"
test-compliance-list="cargo test --test compliance_tests -- --list"
test-all            ="cargo test --all-features"
test-unit           ="cargo test --lib"
test-integration    ="cargo test --test '*'"
dry-release         ="cargo smart-release flow-gates --update-crates-index"
publish             ="cargo smart-release flow-gates --update-crates-index --execute"
changelog           ="cargo changelog flow-gates --write"
