[package]
name="peacoqc-cli"
version= "0.1.2"
edition.workspace=true
authors.workspace=true
license.workspace=true
description="Command-line tool for PeacoQC flow cytometry quality control"
repository="https://github.com/jrmoynihan/flow/peacoqc-cli"
keywords=[
    "flow-cytometry",
    "quality-control",
    "bioinformatics",
    "command-line",
]
categories=["science", "command-line-utilities"]

[[bin]]
name="peacoqc"
path="src/main.rs"

[dependencies]
flow-fcs={ path="../fcs", version= "^0.1.5" }
peacoqc-rs={ path="../peacoqc-rs", version= "^0.1.3", features=[
    "flow-fcs",
] }
anyhow.workspace=true
serde_json.workspace=true
clap={ version="4.5.54", features=["derive", "cargo"] }
indicatif="0.18.3"
rayon.workspace=true
walkdir="2.5"
tracing.workspace=true
tracing-subscriber={ workspace=true }
dialoguer="0.12"

[package.metadata.scripts]
test       ="cargo test"
dry-release="cargo smart-release peacoqc-cli --update-crates-index"
publish    ="cargo smart-release peacoqc-cli --update-crates-index --execute"
changelog  ="cargo changelog peacoqc-cli --write"
