[package]
name="peacoqc-rs"
version="0.1.0"
edition.workspace=true
authors.workspace=true
license.workspace=true
description="PeacoQC quality control algorithms for flow cytometry"
keywords=[
    "flow-cytometry",
    "quality-control",
    "bioinformatics",
    "peacoqc",
]

[features]
default =["flow-fcs"]
flow-fcs=["dep:flow-fcs", "dep:polars"]

[dependencies]
flow-fcs           ={ path="../fcs", version="0.1.1", optional=true }
polars             ={ workspace=true, optional=true }
anyhow.workspace   =true
thiserror.workspace=true
rand.workspace     =true
rayon.workspace    =true
plotters           ="0.3.7"
image              ="0.25.9"
serde.workspace    =true
tracing.workspace  =true

[dev-dependencies]
approx   ="0.5"
criterion="0.8.1"

[[bench]]
name   ="peacoqc_bench"
harness=false

[[bench]]
name   ="kde_bench"
harness=false
