[package]
name="peacoqc-rs"
version= "0.2.0"
edition.workspace=true
authors.workspace=true
license.workspace=true
description="PeacoQC quality control algorithms for flow cytometry"
repository="https://github.com/jrmoynihan/flow/peacoqc-rs"
keywords=[
    "flow-cytometry",
    "quality-control",
    "bioinformatics",
    "peacoqc",
]
categories=["science", "algorithms"]

[features]
default =["flow-fcs"]
flow-fcs=["dep:flow-fcs", "dep:polars"]
gpu = ["dep:burn"]
cubecl = ["dep:cubecl", "dep:bytemuck", "gpu"]

[dependencies]
flow-fcs            ={ path="../fcs", version= "^0.2.0", optional=true }
polars              ={ workspace=true, optional=true }
anyhow.workspace    =true
thiserror.workspace =true
rand.workspace      =true
rayon.workspace     =true
plotters            ="0.3.7"
image              ="0.25.9"
serde.workspace     =true
serde_json.workspace=true
tracing.workspace   =true
realfft             ="3.5.0" # FFT-based KDE for performance
csaps               ="0.3" # Cubic smoothing splines (matches R's smooth.spline)
ndarray             ="0.17.2" # Required by csaps for array types (must match csaps version)
burn                ={ version = "0.20", optional = true, features = ["wgpu"] }
cubecl              ={ version = "0.9", optional = true }
bytemuck            ={ workspace = true, optional = true }

[dev-dependencies]
approx   ="0.5"
criterion="0.8.1"
tempfile ="3.10"

[[bench]]
name   ="peacoqc_bench"
harness=false

[[bench]]
name   ="kde_bench"
harness=false

[[bench]]
name   ="qc_throughput"
harness=false

[[bench]]
name   ="gpu_bench"
harness=false

[package.metadata.scripts]
test       ="cargo test"
dry-release="cargo smart-release peacoqc-rs --update-crates-index"
publish    ="cargo smart-release peacoqc-rs --update-crates-index --execute"
changelog  ="cargo changelog peacoqc-rs --write"
