[package]
name="flow-plots"
version="0.1.2"
edition.workspace=true
authors.workspace=true
repository="https://github.com/jrmoynihan/flow/flow-plots"
license="MIT"
description="Package for drawing and interacting with plots in flow cytometry data"
keywords=[
    "flow-cytometry",
    "bioinformatics",
    "science",
    "visualization",
    "plots",
]
categories=["science", "visualization"]

[features]
default=[]
gpu    =["dep:burn", "dep:bytemuck"]
cubecl =["dep:cubecl", "gpu"]

[dependencies]
colormap      ="0.0.2"
colorgrad     ={ version="0.8", features=["preset"] }
derive_builder={ workspace=true }
flow-fcs      ={ path="../fcs", version="^0.1.4" }
image         ="0.25.9"
plotters      ="0.3.7"
anyhow        ={ workspace=true }
rustc-hash    ={ workspace=true }
serde         ={ workspace=true, features=["derive"] }
ts-rs         ="11.1.0"
once_cell     ="1.20"
rayon         ={ workspace=true }
num-traits    ="0.2"
burn          ={ version="0.20", optional=true, features=["wgpu"] }
bytemuck      ={ version="1", optional=true }
cubecl        ={ version="0.9", optional=true }

[dev-dependencies]
criterion={ version="0.8.1", features=["html_reports"] }
rand     ="0.8"

[[bench]]
name="batch_density"
harness=false

[package.metadata.scripts]
test       ="cargo test"
dry-release="cargo smart-release flow-plots --update-crates-index"
publish    ="cargo smart-release flow-plots --update-crates-index --execute"
changelog  ="cargo changelog flow-plots --write"
